# elearn

./: .gitignore  Cargo.toml  README.md
assets/: log4rs.yml  日文假名.ron
src/: exam.rs  lib.rs  main.rs  www.rs
static/: editor_index.js  index.js
templates/: editor_clustering.html  editor_index.html  index.html  list_history.html  test_clustering.html  test_name_option.html  welcome.html
