[package]
name = "elearn"
version = "0.1.0"
edition = "2018"
default-run = "elearn_editor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

warp = "0.3"                   
tokio = { version = "1", features = ["full"] }
error-chain = "0.12"
log = "0.4"
log4rs = "1"
lazy_static = "1.4"
tera = "1.12"
serde_json = "1"
serde_derive = "1"
serde = "1"
ron = "*"

