[package]
name = "elearn"
version = "0.1.2"
edition = "2021"
default-run = "elearn"
description = "A web backend for examination."
license = "WTFPL"
repository = "https://github.com/lifeich1/elearn"
categories = ["web-programming"]
readme = "README.md"
keywords = ["learning"]

[dependencies]

warp = "0.3"                   
tokio = { version = "1", features = ["full"] }
error-chain = "0.12"
log = "0.4"
log4rs = "1"
lazy_static = "1.4"
tera = "1.12"
serde_json = "1"
serde_derive = "1"
serde = "1"
ron = "0.7"
urlencoding = "2"
rand = { version = "0.8", features = ["default", "alloc"]}
chrono = "0.4"
